0.0.29 - codeblocks and bugfixes toz-index for modals in dropdowns

--- a/components/ModalStack.module.scss
+++ b/components/ModalStack.module.scss
@@ -8,10 +8,13 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: var(--z-index-modals);
 }
 
 .item {
   pointer-events: auto;
   position: absolute;
-  transition: opacity 0.2s ease, transform 0.4s ease;
+  transition:
+    opacity 0.2s ease,
+    transform 0.4s ease;
 }
